apps/transmission/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: transmission
  labels:
    name: transmission
