apps/transmission/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
  namespace: transmission
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Transmission"
    gethomepage.dev/description: "BitTorrent client"
    gethomepage.dev/icon: "transmission.png"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/weight: "30"
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - "transmission.ganam.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: transmission
          port: 80
          weight: 1
